--- a/styles.css
+++ b/styles.css
@@ -16,7 +16,7 @@ table,th,td{
     width: 100%;
 }
 #g{
-    background-color: 0 0 0 0;
-    color: white;
+    background-color:black;
+    color:rgb(0 0 0);
 }
 
